Create components for changeBg(Main/Login), change styles, add some components (also export)

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -19,8 +19,9 @@
   &__title-administrate {
     font-weight: 400;
     font-size: 0.625rem;
-    line-height: 0.75rem;
+    line-height: 0;
     letter-spacing: 0.3125rem;
+    text-transform: uppercase;
 
   }
 }
