--- a/src/styles/_bgImage.scss
+++ b/src/styles/_bgImage.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  z-index: 1;
 }
 
 .bgImgMain {
@@ -13,8 +14,15 @@
 
 .bgImgLogin {
   background-image: url("../../img/background-login.jpg");
-}
 
-// backgroundSize: "cover",
-// backgroundPosition: "center",
-// backgroundRepeat: "no-repeat",
+  &::after{
+    content: '';
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  }
+}
