--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,8 +3,10 @@
   font-weight: 700;
   font-style: normal;
   font-size: 2.125rem;
-
-  cursor: pointer;
+  
+  span {
+    cursor: pointer;
+  }
 
   &__title {
     display: flex;
