--- a/src/styles/_movie.scss
+++ b/src/styles/_movie.scss
@@ -1,9 +1,107 @@
 .movie {
+  color: #000000;
 
   &__container {
     background-color: var(--color-grey-alt);
     margin-bottom: 20px;
     border-radius: var(--border-radius-small);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  &__content {
+    // style={{ display: "flex", gap: "20px" }}
+    display: flex;
+  }
+
+  &__picture {
+    // style={{ width: "120px", borderRadius: "8px", height: "100%" }}
+    width: 7.8125rem;
+    // height: 10.9375rem;
+    height: 100%;
+    margin-right: 1px;
+    border-radius: var(--border-radius-small);
+
+    &-figure {
+      max-width: 6px;
+      width: 100%;
+      height: 16px;
+      background-color: #393939;
+    }
+  }
+
+  &__tittle {
+    &-heading {
+      // style={{ margin: "0 0 10px" }}
+      // margin: 0 0 10px;
+      margin-left: 8px;
+      margin-bottom: 10px;
+
+      font-size: 1rem;
+      font-weight: 700;
+      line-height: 1.125rem;
+    }
+
+    &-description {
+      // style={{ margin: "0", color: "#888" }}
+      font-size: 0.875rem;
+      font-weight: 400;
+      line-height: 1rem;
+
+      margin-left: 8px;
+      margin-bottom: 0;
+      cursor: pointer;
+      // width: 200px;
+      // white-space: nowrap;
+      // overflow: hidden;
+      // text-overflow: ellipsis;
+    }
+
+    &-movie-time {
+      // style={{ margin: "0 0 5px", color: "#666" }}
+      font-size: 0.875rem;
+      font-weight: 300;
+      line-height: 1rem;
+
+      margin-top: 8px;
+      margin-left: 8px;
+    }
+  }
+
+  &__halls-tittle {
+    margin-top: 5px;
+
+    &:nth-child(n+2) {
+      margin-top: 25px;
+    }
+
+    &-heading {
+      font-size: 1rem;
+      font-weight: 700;
+      line-height: 1.125rem;
+      margin-bottom: 0;
+    }
+  }
+
+  &__halls-seance {
+    // style={{ display: "flex", gap: "10px", flexWrap: "wrap" }}
+    display: flex;
+    flex-wrap: wrap;
+
+    &-time {
+      // style={{
+      //   padding: "5px 10px",
+      //   backgroundColor: "#f4f4f4",
+      //   border: "1px solid #ddd",
+      //   borderRadius: "5px",
+      //   cursor: "pointer",
+      // }}
+      cursor: pointer;
+      padding: 5px 10px;
+      margin-right: 3px;
+      margin-top: 10px;
+
+      box-shadow: 0px 2px 3px 1px #0000003D;
+      border: none;
+      border-radius: var(--border-radius-small);
+    }
   }
 }
