--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -15,20 +15,35 @@
 .login {
   color: var(--base-color-text);
 
+  &__container {
+    max-width: 100% !important;
+  }
+
   &__header {
     padding-top: 2.125rem;
     padding-right: 2.625rem;
     padding-bottom: 2.1875rem;
     padding-left: 6.5rem;
 
+    max-width: 972px !important;
+    width: 100% !important;
+
     @media (max-width: 768px) {
       padding: 0.875rem;
+      width: 100%;
+    }
+
+    @media(max-width: 390px) {
+      padding-left: 0;
+
     }
   }
 
   &__container-form {
-    width: 480px;
-    height: 294px;
+    max-width: var(--max-width-login-form) !important;
+    width: 100%;
+    max-height: var(--max-height-login-form);
+    height: 100%;
   }
 
   &__title {
@@ -46,7 +61,6 @@
   &__form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 
     background-color: var(--base-color-admin-body);
@@ -63,6 +77,7 @@
       border: 1px solid var(--base-color-admin-label);
       border-radius: 0;
       color: var(--base-color-admin-input) !important;
+      width: 272px !important;
 
       &::placeholder {
         color: var(--base-color-admin-input) !important;
@@ -70,6 +85,9 @@
     }
 
     button {
+      max-width: 189px;
+      width: 100%;
+
       border-radius: var(--border-radius);
       border: none !important;
       padding: 0.75rem;
@@ -85,7 +103,7 @@
       box-shadow: var(--shadow);
 
       cursor: pointer;
-      
+
       @include hover {
         background-color: var(--base-color-button-hover) !important;
         border: none !important;
