Change styles for bg and login

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --base-color-admin-body: #eae9ebf2;
   --base-color-admin-label: #848484;
   --base-color-admin-input: #757575;
+  --base-color-admin-input-border: #B7B7B7;
   --base-color-text: rgba(255, 255, 255, 0.87);
   --color-grey-alt: #F1EBE6F2;
 
