--- a/src/styles/_bgImage.scss
+++ b/src/styles/_bgImage.scss
@@ -1,6 +1,6 @@
 .containerBg {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   overflow-y: auto;
   background-size: cover;
   background-attachment: fixed;
@@ -18,7 +18,7 @@
   &::after{
     content: '';
     background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
