--- a/src/styles/_movieSeance.scss
+++ b/src/styles/_movieSeance.scss
@@ -55,8 +55,8 @@
 
   &__places {
     background: var(--color-placeSeanceBusy);
-    min-height: 100px;
-    // height: 100%;
+    height: 100%;
+    
     &-container {
       max-width: 284px;
       width: 100%;
