--- a/src/styles/_movieSeance.scss
+++ b/src/styles/_movieSeance.scss
@@ -187,5 +187,10 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
+    &:disabled {
+      background: var(--color-placeSeance);
+      cursor: not-allowed;
+    }
   }
 }
