Added component BookingTickets with styles, change navigate in MovieSeance

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --color-grey-alt: #f1ebe6f2;
   --color-placeSeance: #8e8e8e;
   --color-placeSeanceBusy: #171D24;
+  --color-seance-orange: #C76F00;
 
   --border-admin-input: 1px solid var(--base-color-admin-top);
   --border-radius: 3px;
