--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -67,7 +67,6 @@ $height-navDate-active: 52px;
   }
 
   &__nav-date {
-    box-sizing: content-box;
     font-size: 0.75rem;
     font-weight: 400;
     line-height: 0.875rem;
@@ -77,11 +76,8 @@ $height-navDate-active: 52px;
     width: $width-navDate;
     max-height: $height-navDate;
 
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    
+    padding: 10px 20px;
+
     margin-right: 1px;
 
     overflow: hidden;
@@ -101,10 +97,9 @@ $height-navDate-active: 52px;
 
       width: $width-navDate-active;
       height: $height-navDate-active;
-      transition: width 0.3s ease-in;
+      // transition: width 0.3s ease-in;
 
-      padding-top: 10px;
-      padding-left: 10px;
+      padding: 10px 20px;
 
       text-transform: capitalize;
 
@@ -129,68 +124,48 @@ $height-navDate-active: 52px;
   }
 }
 
-// @media (max-width: $desktop) {
-//   .main {
-//     max-width: 61.85rem;
+@media (max-width: $tablet) {
+  .main {
+    background-color: pink;
+    max-width: $tablet !important;
 
-//     &__nav-date {
-//       width: $width-navDate;
-//       height: $height-navDate;
+    &__nav-date {
+      padding: 10px;
+      width: $width-navDate-md;
 
-//       &-active {
-//         width: $width-navDate-active;
-//         height: $height-navDate-active;
-//       }
-//     }
+      &-active {
+        width: $width-navDate-active-md;
+      }
+    }
 
-//     &__nav-date-button {
-//       width: $width-navDate;
-//       height: $height-navDate;
-//     }
-//   }
-// }
+    &__nav-date-button {
+      width: $width-navDate-md;
+    }
+  }
+}
 
-// @media (max-width: $tablet) {
-//   .main {
-//     background-color: pink;
-//     max-width: $tablet !important;
+@media (max-width: $mobile) {
+  .main {
+    background-color: red;
+    max-width: $mobile !important;
 
-//     &__nav-date {
-//       width: $width-navDate-md;
+    &__nav-date {
+      width: $width-navDate-sm-min;
+      height: $height-navDate;
+      padding: 8px;
 
-//       &-active {
-//         width: $width-navDate-active-md;
-//       }
-//     }
+      &:nth-child(1) {
+        width: $width-navDate-sm-max;
+      }
 
-//     &__nav-date-button {
-//       width: $width-navDate-md;
-//     }
-//   }
-// }
+      &-active {
+        width: $width-navDate-active-sm-max;
+        padding: 8px;
+      }
+    }
 
-// @media (max-width: $mobile) {
-//   .main {
-//     background-color: red;
-//     max-width: $mobile !important;
-
-//     &__nav-date {
-//       width: $width-navDate-sm-max;
-//       // min-width: $width-navDate-sm-min;
-//       padding-top: 10px;
-//       padding-left: 10px;
-
-//       &-active {
-//         max-width: $width-navDate-active-sm-max;
-//         // min-width: $width-navDate-active-sm-min;
-//         padding-top: 10px;
-//         padding-left: 10px;
-//       }
-//     }
-
-//     &__nav-date-button {
-//       width: $width-navDate-sm-max;
-//       // min-width: $width-navDate-sm-min;
-//     }
-//   }
-// }
+    &__nav-date-button {
+      width: $width-navDate-sm-max;
+    }
+  }
+}
