--- a/src/styles/_createHallMoadal.scss
+++ b/src/styles/_createHallMoadal.scss
@@ -21,7 +21,6 @@
     padding: 0;
 
     max-width: 972px;
-    min-width: 390px;
     width: 100%;
 
     align-items: center;
@@ -33,7 +32,7 @@
 
     display: flex;
     flex-wrap: nowrap;
-    justify-content: flex-start;
+    justify-content: space-between;
 
     background-color: var(--base-color-admin-top);
     color: #fff;
@@ -60,8 +59,6 @@
     height: 22px;
     background-image: url(/img/admin__close-button.png);
     background-size: cover;
-    position: absolute;
-    right: 15px;
 
     border: none;
     cursor: pointer;
@@ -128,10 +125,10 @@
   text-transform: uppercase;
   line-height: 1rem;
 
-  border-radius: var(--border-radius);
+  border-radius: var(--border-radius) !important;
   border: none;
-display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
   box-shadow: var(--shadow);
   cursor: pointer;
 }
@@ -171,5 +168,12 @@ display: flex;
   &:focus,
   &:focus-visible {
     outline: 4px auto -webkit-focus-ring-color !important;
+  }
+}
+
+@media (max-width: 390px) {
+  .btn {
+    max-width: 200px;
+    width: 100%;
   }
 }
