--- a/src/styles/_adminPage.scss
+++ b/src/styles/_adminPage.scss
@@ -39,7 +39,7 @@
     height: 95px;
     padding-left: 90px;
     padding-right: 30px;
-    
+
     &-container {
       width: 100%;
 
@@ -83,38 +83,6 @@
 
     background: var(--base-color-admin-body);
     padding: 35px 5px 36px 104px;
-
-    button {
-      max-width: 159px;
-      width: 100%;
-      height: 40px;
-      color: #fff;
-
-      border-radius: var(--border-radius);
-      border: none !important;
-      padding: 0.75rem;
-
-      font-size: 0.875rem;
-      font-weight: 500;
-      line-height: 1rem;
-      text-transform: uppercase;
-
-      background-color: var(--base-color-button) !important;
-      transition: border-color 0.25s;
-      box-shadow: var(--shadow);
-
-      cursor: pointer;
-    }
-
-    button:active {
-      background-color: var(--base-color-admin-top) !important;
-      border: none !important;
-    }
-
-    button:focus,
-    button:focus-visible {
-      outline: 4px auto -webkit-focus-ring-color;
-    }
   }
 
   &__hallSet {
@@ -122,6 +90,65 @@
     flex-direction: column;
     padding: 14px 0 22px 25px;
     gap: 10px;
+  }
+
+  &__btn {
+    max-width: 159px;
+    width: 100%;
+    height: 40px;
+    color: #fff;
+
+    border-radius: var(--border-radius);
+    border: none !important;
+    padding: 0.75rem;
+
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1rem;
+    text-transform: uppercase;
+
+    background-color: var(--base-color-button) !important;
+    transition: border-color 0.25s;
+    box-shadow: var(--shadow);
+
+    cursor: pointer;
+
+    &:active {
+      background-color: var(--base-color-admin-top) !important;
+      border: none !important;
+    }
+
+    &:focus,
+    &:focus-visible {
+      outline: 4px auto -webkit-focus-ring-color;
+    }
+  }
+
+  &__hall-button {
+    border: none;
+    box-shadow: 0 0 3px #0000001f;
+    padding: 12.2px 20.25px 12.9px 21px;
+    border-radius: 3px 0 0;
+    background: #ffffff73;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: left;
+    color: #000;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    &.active {
+      background: #fff;
+      padding: 15.41px 23.03px 13.9px 23.1px;
+      gap: 0px;
+      border-radius: 3px 0 0;
+      opacity: 0px;
+      font-size: 15px;
+      font-weight: 900;
+      box-shadow: 0 2px 2px #0000003d;
+    }
   }
 }
 
@@ -143,7 +170,6 @@
   }
 
   .admin-section {
-
     &__header {
       height: 65px;
       padding-left: 57px;
@@ -192,6 +218,20 @@
       border: 4px solid;
       border-color: #bc95d6;
       box-sizing: border-box;
+    }
+  }
+
+  .admin-section__header-both {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 3px;
+      height: 100%;
+      top: 0;
+      left: 51px;
+      background-color: #bc95d6;
     }
   }
 
