--- a/src/styles/_createHallMoadal.scss
+++ b/src/styles/_createHallMoadal.scss
@@ -111,7 +111,7 @@
 
   &__actions {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     width: 100%;
     gap: 10px;
     justify-content: center;
@@ -172,6 +172,13 @@
 }
 
 @media (max-width: 390px) {
+  .modal {
+    &__actions {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
   .btn {
     max-width: 200px;
     width: 100%;
