--- a/src/styles/_adminPage.scss
+++ b/src/styles/_adminPage.scss
@@ -39,7 +39,7 @@
     height: 95px;
     padding-left: 90px;
     padding-right: 30px;
-    
+
     &-container {
       width: 100%;
 
@@ -148,6 +148,44 @@
       font-size: 15px;
       font-weight: 900;
       box-shadow: 0 2px 2px #0000003d;
+    }
+  }
+
+  &__hall-config {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+    margin-bottom: 35px;
+  }
+
+  &__hall-item {
+    padding: 12px 20px;
+    margin-bottom: 3px;
+    margin-right: 1px;
+
+    background: #ffffff73;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    border-radius: var(--border-radius);
+
+    height: 42px;
+
+    font-size: 0.875rem;
+    font-weight: 500;
+    text-transform: uppercase;
+
+    cursor: pointer;
+
+    &-selected {
+      height: 46px;
+
+      font-size: 0.935rem;
+      font-weight: 900;
+
+      background-color: #ffffff;
+      box-shadow: 0px 6px 8px 0px #0000003d;
+      border: 1px solid #ddd;
     }
   }
 }
