--- a/src/styles/_hallConfig.scss
+++ b/src/styles/_hallConfig.scss
@@ -1,78 +1,199 @@
-.hall-config-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-}
+.hall-config {
+  &__controls {
+    display: flex;
+    flex-direction: column;
 
-.hall-config-controls {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+    margin-bottom: 35px;
+    gap: 10px;
 
-  label {
-    margin-right: 15px;
+    &-places {
+      display: flex;
+      gap: 10px;
+      align-items: center;
 
-    input {
-      width: 50px;
-      margin-left: 5px;
+      span {
+        position: relative;
+        top: 6px;
+
+        font-family: Consolas;
+        font-size: 1.125rem;
+        font-weight: 400;
+        line-height: 1.3125rem;
+        text-transform: uppercase;
+
+        color: var(--base-color-admin-label);
+      }
+
+      label {
+        display: flex;
+        flex-direction: column;
+
+        font-size: 0.75rem;
+        font-weight: 400;
+        line-height: 0.875rem;
+
+        color: var(--base-color-admin-label);
+
+        input {
+          width: 100px;
+          height: 36px;
+          padding-left: 10px;
+          padding-right: 10px;
+
+          font-size: 1rem;
+          font-weight: 400;
+          line-height: 1.1719rem;
+          color: var(--base-color-admin-input);
+          text-align: start;
+
+          border: 1px solid #b7b7b7;
+          border-radius: 1px;
+
+          &:focus {
+            outline: none;
+            border-color: var(--base-color-admin-top);
+            box-shadow: 0 0 5px rgba(79, 1, 99, 0.5);
+          }
+        }
+      }
     }
   }
-}
 
-.hall-config-grid {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  &__types-of-chairs {
+    margin-bottom: 26px;
 
-  .hall-screen {
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
+    &-info {
+      display: grid;
+      gap: 10px;
+      margin-bottom: 11px;
 
-  .hall-row {
-    display: flex;
+      &-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
 
-    .hall-seat {
-      width: 30px;
-      height: 30px;
-      margin: 5px;
-      border-radius: 3px;
+        font-size: 0.875rem;
+        font-weight: 400;
+        line-height: 1rem;
+        color: var(--base-color-admin-label);
+      }
+
+      &-row {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+      }
+    }
+
+    &-tittle {
+      font-size: 0.875rem;
+      line-height: 1rem;
+      color: var(--base-color-admin-label);
+
+      margin-bottom: 11px;
+    }
+
+    &-screen {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid;
+
+      padding: 20px 10px 35px 10px;
+
+      &-tittle {
+        font-size: 1rem;
+        line-height: 1.125rem;
+        letter-spacing: 1.1875rem;
+
+        margin-bottom: 20px;
+      }
+    }
+
+    &-seats {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
+    }
+
+    &-row {
+      display: flex;
+      gap: 5px;
+    }
+
+    &-seat {
+      font-size: 12px;
+      font-weight: bold;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       cursor: pointer;
 
-      &--standard {
-        background-color: #b0b0b0;
+      &-standart {
+        background: #c4c4c4;
+        border: 1px solid rgba(57, 57, 57, 1);
       }
 
-      &--vip {
-        background-color: #4caf50;
+      &-vip {
+        background: url(/img/box__bg.png);
+        border: 1px solid #0a828a;
       }
 
-      &--blocked {
-        background-color: #f44336;
+      &-disabled {
+        background-color: transparent;
+        border: 1px solid rgba(196, 196, 196, 1);
+      }
+    }
+  }
+
+  &__actions {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+
+    button {
+      height: 40px;
+
+      font-size: 0.875rem;
+      font-weight: 500;
+      line-height: 1rem;
+
+      border: none;
+      border-radius: var(--border-radius);
+      cursor: pointer;
+
+      &:first-child {
+        width: 121px;
+
+        background-color: #fff;
+        color: var(--base-color-admin-top);
+
+        &:hover {
+          background-color: var(--base-color-admin-top);
+          color: #fff;
+        }
+      }
+
+      &:last-child {
+        width: 146px;
+
+        background-color: var(--base-color-button);
+        color: white;
+
+        &:hover {
+          background-color: var(--base-color-admin-top);
+        }
       }
     }
   }
 }
 
-.hall-config-actions {
-  margin-top: 20px;
-
-  button {
-    margin: 0 10px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-
-    &.hall-config-cancel {
-      background-color: #f44336;
-      color: white;
-    }
-
-    &.hall-config-save {
-      background-color: #4caf50;
-      color: white;
-    }
-  }
+.box {
+  width: 26px;
+  height: 26px;
+  border-radius: var(--border-radius-large);
 }
