Changed styles createHallModal.scss

--- a/src/styles/_createHallModal.scss
+++ b/src/styles/_createHallModal.scss
@@ -162,6 +162,7 @@
 
   &:active {
     background-color: var(--base-color-admin-top) !important;
+    color: #fff !important;
     border: none !important;
   }
 
