--- a/src/styles/_priceConfig.scss
+++ b/src/styles/_priceConfig.scss
@@ -94,7 +94,7 @@
         background-color: #fff;
         color: var(--base-color-admin-top);
 
-        &:hover {
+        &:active {
           background-color: var(--base-color-admin-top);
           color: #fff;
         }
@@ -106,7 +106,7 @@
         background-color: var(--base-color-button);
         color: white;
 
-        &:hover {
+        &:active {
           background-color: var(--base-color-admin-top);
         }
       }
