--- a/src/styles/_createHallModal.scss
+++ b/src/styles/_createHallModal.scss
@@ -67,6 +67,7 @@
   &__form {
     display: flex;
     flex-direction: column;
+    gap: 8px;
     align-items: center;
 
     width: 100%;
@@ -75,16 +76,7 @@
     max-width: 768px;
 
     label {
-      width: 100%;
-
-      display: flex;
-      flex-direction: column;
       color: var(--base-color-admin-label);
-
-      font-size: 12px;
-      font-weight: 400;
-      line-height: 14px;
-      text-align: left;
     }
 
     input {
@@ -95,6 +87,26 @@
 
       background-color: #fff;
 
+      outline: none;
+      border: 1px solid var(--base-color-admin-input-border);
+
+      &:focus {
+        outline: var(--base-color-admin-top);
+        border-color: var(--base-color-admin-top);
+      }
+
+      &::placeholder {
+        color: var(--base-color-admin-input);
+      }
+    }
+
+    textarea {
+      width: 100%;
+      height: 80px;
+
+      padding: 8px;
+
+      resize: none;
       outline: none;
       border: 1px solid var(--base-color-admin-input-border);
 
@@ -119,7 +131,11 @@
   }
 }
 
-.btn {
+.hidden-input {
+  display: none; 
+}
+
+.btn-box {
   font-size: 0.875rem;
   font-weight: 500;
   text-transform: uppercase;
@@ -127,8 +143,11 @@
 
   border-radius: var(--border-radius) !important;
   border: none;
+
   display: flex;
   align-items: center;
+  justify-content: center;
+  
   box-shadow: var(--shadow);
   cursor: pointer;
 }
@@ -163,6 +182,27 @@
   &:active {
     background-color: var(--base-color-admin-top) !important;
     color: #fff !important;
+    border: none !important;
+  }
+
+  &:focus,
+  &:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color !important;
+  }
+}
+
+.btn__upload {
+  max-width: 194px;
+  width: 100%;
+  height: 40px;
+
+  text-align: center;
+
+  background-color: var(--base-color-button) !important;
+  color: #fff !important;
+
+  &:active {
+    background-color: var(--base-color-admin-top) !important;
     border: none !important;
   }
 
